--- a/UmbracoBlogSite/Views/Home.cshtml
+++ b/UmbracoBlogSite/Views/Home.cshtml
@@ -7,7 +7,7 @@
 @* the fun starts here *@
 
 @{Html.RenderAction("RenderIntro", "SiteLayout"); }
-@*@{Html.RenderAction("RenderFeatured", "Home"); }*@
+@{Html.RenderAction("RenderFeatured", "Home"); }
 
 @*@{Html.RenderAction("RenderServices", "Home"); }*@
 
